=== master

* Fix literalization of infinite and NaN float values in PostgreSQL array bound variables (jeremyevans)

=== 5.71.0 (2023-08-01)

* Support ILIKE ANY on PostgreSQL by not forcing the use of ESCAPE for ILIKE (gilesbowkett) (#2066)

* Add pg_xmin_optimistic_locking plugin for optimistic locking for all models without database changes (jeremyevans)

* Recognize the xid PostgreSQL type as an integer type in the jdbc/postgresql adapter (jeremyevans)

* Make set_column_allow_null method reversible in migrations (enescakir) (#2060)

=== 5.70.0 (2023-07-01)

* Make static_cache plugin better handle cases where forbid_lazy_load plugin is already loaded (jeremyevans)

* Fix ShardedThreadedConnectionPool#remove_server to disconnect all connections if removing multiple servers (jeremyevans)

* Support SEQUEL_DEFAULT_CONNECTION_POOL environment variable for choosing connection pool when :pool_class Database option is not set (jeremyevans)

* Add sharded_timed_queue connection pool (jeremyevans)

* Make connection_{validator,expiration} and async_thread_pool extensions work with timed_queue connection pool (jeremyevans)

* Make connection_{validator,expiration} extensions raise error when used with single threaded pools (HoneyryderChuck, jeremyevans) (#2049)

* Workaround possible resource starvation in threaded connection pool (ioquatix) (#2048)

=== 5.69.0 (2023-06-01)

* Avoid unsupported flag warning when using the mysql adapter with ruby-mysql 3+ (jeremyevans)

* Make mysql adapter work with ruby-mysql 4+ (jeremyevans)

* Add Model::DatasetModule#model accessor (davekaro) (#2040)

* Add trilogy adapter (jeremyevans)

=== 5.68.0 (2023-05-01)

* Add validation_helpers_generic_type_messages plugin for more useful type validation failure messages (jeremyevans) (#2028)

* Make constraint_validations plugin not validate missing columns that have a default value (jeremyevans) (#2023)
