@@ -1,5 +1,7 @@
 === master
 
+* Add pg_auto_parameterize_in_array extension, for converting IN/NOT IN to = ANY or != ALL for more types (jeremyevans)
+
 * Fix literalization of infinite and NaN float values in PostgreSQL array bound variables (jeremyevans)
 
 === 5.71.0 (2023-08-01)
